k8s/quarkus-demo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: david-quarkus-db
  labels:
    app: david-quarkus-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: david-quarkus-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: david-quarkus-db
    spec:
      containers:
        - name: david-quarkus-db
          image: postgres:10.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: david-quarkus-db-v
      volumes:
      - name: david-quarkus-db-v
        persistentVolumeClaim:
          claimName: david-quarkus-db-claim0
---
apiVersion: v1
kind: Service
metadata:
  name: david-quarkus-db
spec:
  selector:
    app: david-quarkus-db
  ports:
    - protocol: TCP
      port: 5432  # maps any incomming port 5432  A Service can map any incoming port to a targetPort.
      targetPort: 5432 #  By default and for convenience, the targetPort is set to the same value as the port field.
