k8s/quarkus-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: david
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/david: "true"
  podSelector:
    matchLabels:
      io.kompose.network/david: "true"
